# paleofuturistic_python

./: .gitignore  404.html  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml
about/: index.html
docs/: about.md  extra_guides.md  index.md  walkthrough.md
extra_guides/: index.html
search/: search_index.json
walkthrough/: index.html
{{ cookiecutter.project_slug }}/: .editorconfig  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
{{ cookiecutter.project_slug }}/.github/actions/setup-env/: action.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: main.yaml  publish-docs.yaml  quality-assurance.yaml  quality_assurance.yaml  release-please.yaml  release.yaml
{{ cookiecutter.project_slug }}/docs/: index.md
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_slug }}/: __init__.py  {{ cookiecutter.project_slug }}.py
{{ cookiecutter.project_slug }}/tests/: __init__.py  test_{{ cookiecutter.project_slug }}.py
