[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}"},
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []
classifiers = [
  # License
  "License :: OSI Approved :: MIT License",

  # Python versions supported by the package
  "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
