[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []
classifiers = [
    # License
    "License :: OSI Approved :: Apache Software License",

    # Python versions supported by the package
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

[dependency-groups]
dev = [
    "mypy==1.18.2",
    "ruff==0.13.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Recommended ignore list for preventing clashes between ruff lint and ruff format.
ignore = [
    # indentation-with-invalid-multiple
    "E111",
    # indentation-with-invalid-multiple-comment
    "E114",
    # over-indented
    "E117",
]

[tool.mypy]
files = ["src/"]
disallow_untyped_defs = true
