[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.0.0"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
authors = [
    {name = "{{ cookiecutter.full_name }}", email = "{{ cookiecutter.email }}"},
]
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []
classifiers = [
    # License
    "License :: OSI Approved :: Apache Software License",

    # Python versions supported by the package
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]

# click is a transient dependency, but broken beyond version 8.2.1
# so this is needed until the following issue is fixed:
# https://github.com/mkdocs/mkdocs/issues/4032
[dependency-groups]
dev = [
    "click<=8.2.1",
    "mkdocs==1.6.1",
    "mkdocstrings[python]==0.30.1",
    "mypy==1.18.2",
    "ruff==0.13.1",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# Recommended ignore list for preventing clashes between ruff lint and ruff format.
ignore = [
    # indentation-with-invalid-multiple
    "E111",
    # indentation-with-invalid-multiple-comment
    "E114",
    # over-indented
    "E117",
]

[tool.mypy]
files = ["src/"]
disallow_untyped_defs = true
